--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
 .chat-container {
   width: 100%;
   max-width: 400px;
-  height: 500px;
+  /* height: 600px; */
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
@@ -58,5 +58,5 @@ button[type="submit"] {
 }
 
 .checkbox-container {
-  margin: 7px;
+  margin: 15px 7px;
 }
